# tigub2b_delivery

./: .env.example  .gitignore  AGENTS.md  COMMIT_MESSAGE.txt  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEPLOY_QUICK_REFERENCE.md  DRIVER_WORKFLOW_GUIDE.md  DRIVER_WORKFLOW_GUIDE_UPDATED.md  IMPLEMENTATION_PLAN.md  MAP_TAB_FEATURE.md  MAP_TAB_IMPLEMENTATION.md  MAP_TAB_SUMMARY.txt  MYSQL_IMPLEMENTATION_SUMMARY.md  MYSQL_MARKS_MIGRATION.md  NOTIFICATION.md  OLD_WORKFLOW_CLEANUP_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_FRONTEND_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE6_DATABASE_MIGRATION_PLAN.md  PHASE6_DATABASE_MIGRATION_PLAN_REVISED.md  PHASE6_DEPLOYMENT_SUMMARY.md  ROUTE_PLANNER_UPDATE.md  SINGLE_SOURCE_OF_TRUTH.md  SUPABASE_SETUP_GUIDE.md  commit_all.sh  create_admin.py  create_basic_admin.py  debug_admin.py  delivery-process-en.md  delivery-process-zh.md  delivery_doc.docx  deploy_all.sh  deploy_backend.sh  deploy_frontend.sh  (+14 more)
bff/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  ruff.toml  test_api.py  test_orders.py
bff/app/: __init__.py  main.py
bff/migrations/: 001_add_driver_id_to_orders.sql  001_create_driver_table.sql  002_add_driver_id_to_orders.sql  003_create_driver_performance_tables.sql  004_seed_driver_performance_data.sql  005_create_delivery_proof_table.sql  006_create_tigu_lookup_table.sql  007_insert_tigu_lookup_data.sql  add_completed_orders.sh  (+11 more)
(+170 files in other folders)
